# shinobi-iga-ryu

./: .replit  app.json  base_de_datos_completa.sql  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  replit.md
.claude/: launch.json
.github/workflows/: build-desktop-macos.yml  build-desktop-windows.yml
artifacts/payments-admin-desktop/src-tauri/: Cargo.toml  tauri.conf.json
artifacts/payments-admin-desktop/src-tauri/capabilities/: default.json
artifacts/payments-admin-desktop/src-tauri/icons/: icon.icns
artifacts/payments-admin-desktop/src-tauri/src/: main.rs
attached_assets/: 2026-03-24_19-38-33_1774401680709.heic  Pasted--ERROR-Command-failed-with-EAGAIN-pnpm-add-pnpm-10-32-1_1773861856921.txt  Pasted--NINJUTSU-El-arte-del-ninja-NINJUTSU-Conocimiento-Ejerc_1774218626381.txt  Pasted--Showing-Recent-Errors-Only-Build-target-ShinobiIgaRyu-_1774477836687.txt  Pasted--UIScene-lifecycle-will-soon-be-required-Failure-to-ado_1774419886305.txt  Pasted--at-process-processTicksAndRejections-node-internal-pro_1773882168997.txt  Pasted-Admin-delete-user-error-t-Error-Failed-query-delete-fro_1773868850398.txt  Pasted-Showing-Recent-Errors-Only-Build-target-ShinobiIgaRyu-o_1774477798387.txt  Pasted-Something-went-wrong-Please-reload-the-app-to-continue-_1773520312276.txt  Pasted-Something-went-wrong-Please-reload-the-app-to-continue-_1773522025380.txt  Pasted-import-React-useEffect-useState-useCallback-useRef-useM_1774476639367.txt  Pasted-predeterminado-01-15-51-585792-0500-misagent-Sending-73_1774419389653.txt
lib/api-spec/: openapi.yaml
scripts/: post-merge.sh
(+92 files in other folders)
