[package]
name = "shinobi-payments-admin"
version = "1.0.3"
description = "Shinobi Iga Ryu - Admin de Pagos"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
